@@ -268,14 +268,23 @@ class TestAlign(object):
         # this shouldn't throw an exception
         align.AlignTraj(universe, reference, filename=outfile).run(step=10)
 
+    def test_AlignTraj_deprecated_attribute(self, universe, reference, tmpdir):
+        reference.trajectory[-1]
+        outfile = str(tmpdir.join('align_test.dcd'))
+        x = align.AlignTraj(universe, reference, filename=outfile).run(stop=2)
+
+        wmsg = "The `rmsd` attribute was deprecated in MDAnalysis 2.0.0"
+        with pytest.warns(DeprecationWarning, match=wmsg):
+            assert_equal(x.rmsd, x.results.rmsd)
+
     def test_AlignTraj(self, universe, reference, tmpdir):
         reference.trajectory[-1]
         outfile = str(tmpdir.join('align_test.dcd'))
         x = align.AlignTraj(universe, reference, filename=outfile).run()
         fitted = mda.Universe(PSF, outfile)
 
-        assert_almost_equal(x.rmsd[0], 6.9290, decimal=3)
-        assert_almost_equal(x.rmsd[-1], 5.2797e-07, decimal=3)
+        assert_almost_equal(x.results.rmsd[0], 6.9290, decimal=3)
+        assert_almost_equal(x.results.rmsd[-1], 5.2797e-07, decimal=3)
 
         # RMSD against the reference frame
         # calculated on Mac OS X x86 with MDA 0.7.2 r689
@@ -288,8 +297,8 @@ class TestAlign(object):
         x = align.AlignTraj(universe, reference,
                             filename=outfile, weights='mass').run()
         fitted = mda.Universe(PSF, outfile)
-        assert_almost_equal(x.rmsd[0], 0, decimal=3)
-        assert_almost_equal(x.rmsd[-1], 6.9033, decimal=3)
+        assert_almost_equal(x.results.rmsd[0], 0, decimal=3)
+        assert_almost_equal(x.results.rmsd[-1], 6.9033, decimal=3)
 
         self._assert_rmsd(reference, fitted, 0, 0.0,
                           weights=universe.atoms.masses)
@@ -308,7 +317,7 @@ class TestAlign(object):
         x_weights = align.AlignTraj(universe, reference,
                                     filename=outfile, weights=weights).run()
 
-        assert_array_almost_equal(x.rmsd, x_weights.rmsd)
+        assert_array_almost_equal(x.results.rmsd, x_weights.results.rmsd)
 
     def test_AlignTraj_custom_mass_weights(self, universe, reference, tmpdir):
         outfile = str(tmpdir.join('align_test.dcd'))
@@ -316,8 +325,8 @@ class TestAlign(object):
                             filename=outfile,
                             weights=reference.atoms.masses).run()
         fitted = mda.Universe(PSF, outfile)
-        assert_almost_equal(x.rmsd[0], 0, decimal=3)
-        assert_almost_equal(x.rmsd[-1], 6.9033, decimal=3)
+        assert_almost_equal(x.results.rmsd[0], 0, decimal=3)
+        assert_almost_equal(x.results.rmsd[-1], 6.9033, decimal=3)
 
         self._assert_rmsd(reference, fitted, 0, 0.0,
                           weights=universe.atoms.masses)
@@ -337,8 +346,8 @@ class TestAlign(object):
         x = align.AlignTraj(universe, reference, filename=outfile,
                             in_memory=True).run()
         assert x.filename is None
-        assert_almost_equal(x.rmsd[0], 6.9290, decimal=3)
-        assert_almost_equal(x.rmsd[-1], 5.2797e-07, decimal=3)
+        assert_almost_equal(x.results.rmsd[0], 6.9290, decimal=3)
+        assert_almost_equal(x.results.rmsd[-1], 5.2797e-07, decimal=3)
 
         # check in memory trajectory
         self._assert_rmsd(reference, universe, 0, 6.929083044751061)
@@ -392,7 +401,7 @@ def _get_aligned_average_positions(ref_files, ref, select="all", **kwargs):
     prealigner = align.AlignTraj(u, ref, select=select, **kwargs).run()
     ag = u.select_atoms(select)
     reference_coordinates = u.trajectory.timeseries(asel=ag).mean(axis=1)
-    rmsd = sum(prealigner.rmsd/len(u.trajectory))
+    rmsd = sum(prealigner.results.rmsd/len(u.trajectory))
     return reference_coordinates, rmsd
 
 class TestAverageStructure(object):
@@ -407,30 +416,51 @@ class TestAverageStructure(object):
     def reference(self):
         return mda.Universe(PSF, CRD)
 
+    def test_average_structure_deprecated_attrs(self, universe, reference):
+        # Issue #3278 - remove in MDAnalysis 3.0.0
+        avg = align.AverageStructure(universe, reference).run(stop=2)
+
+        wmsg = "The `universe` attribute was deprecated in MDAnalysis 2.0.0"
+        with pytest.warns(DeprecationWarning, match=wmsg):
+            assert_equal(avg.universe.atoms.positions,
+                         avg.results.universe.atoms.positions)
+
+        wmsg = "The `positions` attribute was deprecated in MDAnalysis 2.0.0"
+        with pytest.warns(DeprecationWarning, match=wmsg):
+            assert_equal(avg.positions, avg.results.positions)
+
+        wmsg = "The `rmsd` attribute was deprecated in MDAnalysis 2.0.0"
+        with pytest.warns(DeprecationWarning, match=wmsg):
+            assert avg.rmsd == avg.results.rmsd
+
     def test_average_structure(self, universe, reference):
         ref, rmsd = _get_aligned_average_positions(self.ref_files, reference)
         avg = align.AverageStructure(universe, reference).run()
-        assert_almost_equal(avg.universe.atoms.positions, ref, decimal=4)
-        assert_almost_equal(avg.rmsd, rmsd)
+        assert_almost_equal(avg.results.universe.atoms.positions, ref,
+                            decimal=4)
+        assert_almost_equal(avg.results.rmsd, rmsd)
 
     def test_average_structure_mass_weighted(self, universe, reference):
         ref, rmsd = _get_aligned_average_positions(self.ref_files, reference, weights='mass')
         avg = align.AverageStructure(universe, reference, weights='mass').run()
-        assert_almost_equal(avg.universe.atoms.positions, ref, decimal=4)
-        assert_almost_equal(avg.rmsd, rmsd)
+        assert_almost_equal(avg.results.universe.atoms.positions, ref,
+                            decimal=4)
+        assert_almost_equal(avg.results.rmsd, rmsd)
 
     def test_average_structure_select(self, universe, reference):
         select = 'protein and name CA and resid 3-5'
         ref, rmsd = _get_aligned_average_positions(self.ref_files, reference, select=select)
         avg = align.AverageStructure(universe, reference, select=select).run()
-        assert_almost_equal(avg.universe.atoms.positions, ref, decimal=4)
-        assert_almost_equal(avg.rmsd, rmsd)
+        assert_almost_equal(avg.results.universe.atoms.positions, ref,
+                            decimal=4)
+        assert_almost_equal(avg.results.rmsd, rmsd)
 
     def test_average_structure_no_ref(self, universe):
         ref, rmsd = _get_aligned_average_positions(self.ref_files, universe)
         avg = align.AverageStructure(universe).run()
-        assert_almost_equal(avg.universe.atoms.positions, ref, decimal=4)
-        assert_almost_equal(avg.rmsd, rmsd)
+        assert_almost_equal(avg.results.universe.atoms.positions, ref,
+                            decimal=4)
+        assert_almost_equal(avg.results.rmsd, rmsd)
 
     def test_average_structure_no_msf(self, universe):
         avg = align.AverageStructure(universe).run()
@@ -453,13 +483,15 @@ class TestAverageStructure(object):
         universe.trajectory[0]
         ref, rmsd = _get_aligned_average_positions(self.ref_files, u)
         avg = align.AverageStructure(universe, ref_frame=ref_frame).run()
-        assert_almost_equal(avg.universe.atoms.positions, ref, decimal=4)
-        assert_almost_equal(avg.rmsd, rmsd)
+        assert_almost_equal(avg.results.universe.atoms.positions, ref,
+                            decimal=4)
+        assert_almost_equal(avg.results.rmsd, rmsd)
 
     def test_average_structure_in_memory(self, universe):
         avg = align.AverageStructure(universe, in_memory=True).run()
         reference_coordinates = universe.trajectory.timeseries().mean(axis=1)
-        assert_almost_equal(avg.universe.atoms.positions, reference_coordinates, decimal=4)
+        assert_almost_equal(avg.results.universe.atoms.positions,
+                            reference_coordinates, decimal=4)
         assert avg.filename is None
 
 
